# apppilot-agent

./: .env  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  agent_compose_support.py  agent_wait_for_config.py  config.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run.sh
compose/100-n8n-postgres/: docker-compose.yml
compose/101-wordpress-mysql/: docker-compose.yml
compose/102-nextcloud-postgres/: docker-compose.yml
compose/n8n-postgres/: README.md  docker-compose.yml  template.json
compose/nextcloud-postgres/: docker-compose.yml  template.json
compose/wordpress-mysql/: docker-compose.yml  template.json
src/apppilot_agent/: __init__.py  models.py
templates/compose/100-n8n-postgres/: docker-compose.yml  env.example
templates/compose/101-wordpress-mysql/: docker-compose.yml  env.example
templates/compose/102-nextcloud-postgres/: docker-compose.yml  env.example
